[package]
name = "picket"
version = "0.1.0"
edition = "2021"
description = "A lightweight, serde-compatible generational arena."
license = "Apache-2.0"
repository = "https://github.com/achusbyr/picket"
keywords = ["arena", "generational", "memory", "serde"]
categories = ["data-structures", "memory-management", "no-std"]

[dependencies]
serde = { version = "1.0", default-features = false, optional = true }

[dev-dependencies]
serde_json = "1.0"

[features]
default = ["std"]
std = ["serde?/std"]
serde = ["serde/derive", "serde/alloc"]
